# tolgee-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tolgee_mcp/: client.py  server.py
src/tolgee_mcp/tools/: keys.py  rest.py
