[project]
name = "tolgee-mcp"
version = "0.1.0"
description = "MCP server for the Tolgee localization platform API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yannis Tarfa", email = "yannis.tarfa@ateko.com" }
]
requires-python = ">=3.11"
keywords = ["mcp", "tolgee", "localization", "i18n", "translations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/ytarfa/tolgee-mcp"
Repository = "https://github.com/ytarfa/tolgee-mcp"
Issues = "https://github.com/ytarfa/tolgee-mcp/issues"

[project.scripts]
tolgee-mcp = "tolgee_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
